--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@types/faker": "^6.6.9",
     "chart.js": "^3.9.1",
+    "d3": "^7.8.5",
     "faker": "^5.5.3",
     "json-loader": "^0.5.7",
     "mapbox-gl": "^2.9.2",
     "next": "^12.3.4",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0"
